objects/Site_Visit_Feedback_Form__c.object
<CustomObject><fields>
        <fullName>Capacity_Level10__c</fullName>
        <label>Capacity Level</label>
        <picklist>
            <picklistValues>
                <fullName>Highly Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Assess</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Capacity_Level6__c</fullName>
        <label>Capacity Level</label>
        <picklist>
            <picklistValues>
                <fullName>Highly Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Assess</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Capacity_Level7__c</fullName>
        <label>Capacity Level</label>
        <picklist>
            <picklistValues>
                <fullName>Highly Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Assess</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Capacity_to_Implement1__c</fullName>
        <label>Capacity to Implement</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>District_Name_Code__c</fullName>
        <label>District Name/Code</label>
        <length>225</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Engage_with_external_partner1__c</fullName>
        <label>Engage with external partner</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Form__c</fullName>
        <label>Form</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consensus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Infrastructure1__c</fullName>
        <label>Infrastructure</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Leadership1__c</fullName>
        <label>Leadership</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Remain_Open1__c</fullName>
        <label>Remain Open</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Remain_Open__c</fullName>
        <label>Remain Open ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Return_on_Investment1__c</fullName>
        <label>Return on Investment</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>School_Name_Code__c</fullName>
        <label>School Name/Code</label>
        <length>225</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Site_Visit_New__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Visit</label>
        <referenceTo>Site_Visit__c</referenceTo>
        <relationshipLabel>Site Visit Feedback Form</relationshipLabel>
        <relationshipName>Site_Visit_Feedback_Form</relationshipName>
        <type>Lookup</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Site Visit Feedback Form</label><nameField>
        <label>Reviewer Name(s)</label>
        <type>Text</type>
    </nameField><pluralLabel>Site Visit Feedback Form</pluralLabel><sharingModel>Private</sharingModel></CustomObject>